--- a/progect.css
+++ b/progect.css
@@ -4,19 +4,17 @@ height: 158px;
 left: 0px;
 top: 0px;
 background: #CB6F3B;
-  
-	
-	
 }
 .oi{
-	position: absolute;
-width: 800px;
-height: 450px;
+display:block;
+width: 100%;
+height: 100%;
 left: 185;
-top: 211px;
-	
+top: 190px;
 	
 }
+
+	
 
 .line{
 	position: absolute;
@@ -40,12 +38,13 @@ background: url(k.jpg);
 	
 }
 
-.lina{
+.lia{
 	position: absolute;
 width: 1121px;
 height: 0px;
 left: 0px;
-top:  650px;
+top:  670px;
+
 
 border: 5px solid #000000;
 transform: rotate(0.09deg);
@@ -174,14 +173,69 @@ background: #CB6F3B;
 position:absolute;
 width:1110px;
 height:158px;	
-top:950px;	
-
-
+top:1400px;	
 background:#000000;	
 }
+
 .tr{
-position:absolute;
+	position:absolute;
 top:320px;
 left:10px;
 	
+}
+.naprav{
+	padding:2px;
+	width:700px;
+	height:600px;
+background: #CB6F3B;
+margin: 0 auto;
+}
+.naprav_block{
+		width:150px;
+		margin:30px 5px 30px 5px;
+		padding:5px;
+		background:#ffffff;
+}	
+.f{
+	position:absolute;
+	left:500px;
+	padding:20px;
+	height:250px;
+	
+}
+.s{
+	padding:20px;
+	
+	
+}	
+
+
+
+
+.inf_o_st{
+	padding:70px;
+	height:276px;
+	width:300px;
+	background:#ffffff;
+	position:absolute;
+	top:790px;
+	left:400px;
+}
+
+
+img {
+	
+    display: none;
+	height:200px;
+}
+
+.block {
+    display: block;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.slides {
+    width: 1000px;
+    height: 500px;
 }
