--- a/progect.css
+++ b/progect.css
@@ -27,7 +27,7 @@ body{
 width:99%;
 height: 0px;
 left: 0px;
-top:120%;
+top:90%;
 
 
 border: 5px solid #000000;
@@ -180,8 +180,9 @@ background: #CB6F3B;
 margin:5% 0% 0% 0%;
 width:100%;
 height:10%;	
-top:1400px;	
-background:#000000;	
+top:10500px;	
+background:#000000;
+float:bottom;	
 }
 
 .tr{
@@ -207,17 +208,10 @@ margin:5%;
 		
 }	
 .f{
-	position:absolute;
-	left:500px;
-	padding:20px;
-	height:250px;
+	
+	
 	
 }
-.s{
-	padding:20px;
-	
-	
-}	
 
 
 .list{
@@ -243,7 +237,7 @@ margin:5%;
 	margin:10px;
 	
 }
-img {
+div>img{
 	margin:0 auto;
     display: none;
 	height:10%;
@@ -270,3 +264,107 @@ img {
 		margin:0 auto;
 
 }
+
+li>ul{
+	
+	display:none;
+	position:fixed;
+	
+}
+
+div>ul>li{
+	position:fixed;
+	float:left;
+	margin:
+	
+	
+}
+
+
+div>ul>li:hover>ul{
+		position:fixed;
+
+	display:block;
+	
+}
+
+li{
+	
+	list-style-type: none;
+	
+}	 
+	
+.lin{
+	
+	
+width:99%;
+height: 0px;
+left: 0px;
+top:190%;
+margin:2%;		
+
+
+border: 5px solid #000000;
+transform: rotate(0.09deg);
+	
+	
+}
+
+.pod_lin{
+	
+	float:left;
+	
+}
+.yto{
+	position:relative;
+	left:38%;
+}
+.s{
+	padding:20px;
+	position:relative;
+	padding:1%;
+	float:right;
+	margin:2%;
+	height:20%;
+}
+
+.v{
+	padding:20px;
+	position:relative;
+	padding:1%;
+	height:20%;
+	float:left;
+	width:33%;
+	margin:2%
+}
+
+.t{
+	padding:20px;
+	position:relative;
+	padding:1%;
+	height:20%;
+	margin:2%;
+	left:32%;
+}
+.iop{
+	
+	position:
+	
+}
+.pj{
+	left:18%;
+	padding:10%;
+	position:relative;
+	display:block;
+}
+.lk{
+	
+	left:11%;
+	padding:10%;
+	position:relative;
+	display:block;
+	
+}
+	
+	
+	
