--- a/progect.css
+++ b/progect.css
@@ -1,6 +1,6 @@
 .block5{
 width: 100%;
-height: 70px;
+height:30%;
 left: 0px;
 top: 0px;
 background: #CB6F3B;
@@ -28,7 +28,7 @@ body{
 width:99%;
 height: 0px;
 left: 0px;
-top:90%;
+top:120%;
 
 
 border: 5px solid #000000;
@@ -180,7 +180,7 @@ background: #CB6F3B;
 .footer{
 margin:5% 0% 0% 0%;
 width:100%;
-height:10%;	
+height:20%;	
 top:10500px;	
 background:#000000;
 float:bottom;	
@@ -193,18 +193,18 @@ left:10px;
 	
 }
 .naprav{
-	padding:2px;
-	width:700px;
-	height:600px;
+padding:2px;
+width:100%;
+height:110%;
 background: #CB6F3B;
-left:19%;
-position:relative;
-margin:5%;
+left:;
+
+
 }
 .naprav_block{
-		width:150px;
-		margin:30px 5px 30px 5px;
-		padding:5px;
+			width:85%;
+		margin:20% 5% 20% 5%;
+		padding:5%;
 		background:#ffffff;
 		
 }	
@@ -224,12 +224,14 @@ margin:5%;
 
 .inf_o_st{
 	
-	padding:70px	;
-	height:276px;
-	width:300px;
+	padding:9%;
+	min-height:40%;
+	width:30%;
 	background:#ffffff;
 	float:left;
 	margin:5%;
+	position:relative;
+	left:10%;
 
 }
 
@@ -319,6 +321,7 @@ transform: rotate(0.09deg);
 .yto{
 	position:relative;
 	left:38%;
+	margin:0 auto;
 }
 .s{
 	padding:20px;
@@ -353,10 +356,14 @@ transform: rotate(0.09deg);
 	
 }
 .pj{
-	left:18%;
+	
+	left:%;
 	padding:10%;
-	position:relative;
 	display:block;
+	min-width:60%;
+	min-height:50%;
+	margin:0 auto;
+	
 }
 .lk{
 	
@@ -384,9 +391,20 @@ left:13%;
 	
 .kj{
 	
-	width:2%;
+	width:3%;
+	
 	
 	
 }	
+.jl{
 	
+	position:fixed	;
 	
+}	
+.fo{
+	
+	margin:1%;
+	min-height:50%;
+	min-width:4%;
+	
+}
